--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -37,31 +37,62 @@
 	<h1>Research for MALS Students</h1>
 </section>
 <section>
+	<h2>What we'll cover</h2>
+	<ul>
+		<li>Finding a topic</li>
+		<li>Searching for resources</li>
+		<li>Paper formatting</li>
+	</ul>
+</section>
+<section>
 	<section>
 		<h2>Finding a topic</h2>
+		<ul>
+			<li>Think of work you've done before</li>
+			<li>What are your personal interests?</li>
+			<li>Consider current events</li>
+			<li>Recall your own experiences</li>
+		</ul>
+		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 	<section>
-		<p>Think of work you've done before</p>
-		<p>What are your personal interests?</p>
-		<p>Consider current events</p>
-		<p>Recall your own experiences</p>
+		<ul>
+			<li>Search for primary documents</li>
+			<li>Read scholarly literature</li>
+			<li>Look for debates and uncertainties</li>
+		</ul>
+		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 	<section>
 		<h2>Narrow down your topic</h2>
-	</section>
-	<section>
-		<p>Find something of interest</p>
-		<p>Raise a question</p>
-		<p>Next steps</p>
-		<p>RESEARCH IS ITERATIVE</p>
+		<ul>
+			<li>Find something of interest</li>
+			<li>A topic</li>
+			<li>Raise a question about that topic</li>
+			<li>Next steps</li>
+			<li>RESEARCH IS ITERATIVE</li>
+			<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
+		</ul>
 	</section>
 	<section>
 		<img src="http://www.williamcronon.net/researching/questionimages/932_Framing_a_research_question_fig07_highres.jpg">
+		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 	<section>
-		<p>Search for primary documents</p>
-		<p>Read scholarly literature</p>
-		<p>Look for debates and uncertainties</p>
+		<ul>
+			<li>HOW and WHY often go deeper than WHO, WHAT, WHEN, WHERE</li>
+			<li>Don't speculate, gather evidence</li>
+			<li>Ask a useful question</li>
+		</ul>
+		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
+	</section>
+	<section>
+		<ul>
+			<li>From an interest in a topic</li>
+			<li>To a focused topic</li>
+			<li>To a question worth asking</li>
+			<li>To an answer with support</li>
+		</ul>
 		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 </section>
@@ -73,6 +104,14 @@
 <section>
 	<section>
 		<h2>Finding &amp; Evaluating sources</h2>
+	</section>
+	<section>
+		<dl>
+			<dd>different sources:</dd>
+			<dt>primary</dt>
+			<dt>secondary</dt>
+			<dt>tertiary?</dt>
+		</dl>
 	</section>
 	<section>
 		<h2>Peer-reviewed Articles</h2>
@@ -105,16 +144,16 @@
 	</section>
 	<section>
 		<dl>
-			<dd>Author Authority</dd>
-			<dt>Who created the item?  What is his or her affiliation?</dt>
-			<dd>Audience and Purpose</dd>
-			<dt>Who is the intended audience?  Why was the item created?</dt>
-			<dd>Accuracy and Completeness</dd>
-			<dt>Is the evidence reliable?  Are the important points covered?</dt>
-			<dd>Footnotes and Documentation</dd>
-			<dt>Are the author's sources clearly identified with complete citations to allow you to find the original source yourself?</dt>
-			<dd>Perspective and Bias</dd>
-			<dt>How do the author's bias and perspective inform the arguments and evidence presented?</dt>
+			<dt>Author Authority</dt>
+			<dd>Who created the item?  What is his or her affiliation?</dd>
+			<dt>Audience and Purpose</dt>
+			<dd>Who is the intended audience?  Why was the item created?</dd>
+			<dt>Accuracy and Completeness</dt>
+			<dd>Is the evidence reliable?  Are the important points covered?</dd>
+			<dt>Footnotes and Documentation</dt>
+			<dd>Are the author's sources clearly identified with complete citations to allow you to find the original source yourself?</dd>
+			<dt>Perspective and Bias</dt>
+			<dd>How do the author's bias and perspective inform the arguments and evidence presented?</dd>
 		</dl>
 		<small style="padding-top: 100px;">From <i>The Information-Literate Historian</i> by Jenny L. Presnell</small>
 	</section>
@@ -131,7 +170,8 @@
 </section>
 <section>
 	<h2>Paper formatting</h2>
-	<p>Purdue OWL</p>
+	<h2>How to cite</h2>
+	<p><a href='https://owl.english.purdue.edu/owl/'>Purdue OWL</a></p>
 </section>
 <section>
 	<section>
@@ -153,9 +193,7 @@
 
 	</section>
 </section>
-<section>
-	<h2>How to cite</h2>
-</section>
+
 <section>
 	<h2>Differences in Disciplines</h2>
 </section>
