--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -107,10 +107,10 @@
 	</section>
 	<section>
 		<dl>
-			<dd>different sources:</dd>
-			<dt>primary</dt>
-			<dt>secondary</dt>
-			<dt>tertiary?</dt>
+			<dd>Different sources:</dd>
+			<dt>Primary</dt>
+			<dt>Secondary</dt>
+			<dt>Tertiary?</dt>
 		</dl>
 	</section>
 	<section>
@@ -157,14 +157,26 @@
 		</dl>
 		<small style="padding-top: 100px;">From <i>The Information-Literate Historian</i> by Jenny L. Presnell</small>
 	</section>
+	<section>
+		<ul>
+			<li>Topic: I am studying _____</li>
+			<li>Question: because I want to find out what/why/how _______</li>
+			<li>Significance: in order to help my reader understand _______</li>
+		</ul>
+	</section>
 </section>
 <section>
-	<h2>How to take notes</h2>
+	<section>
+		<h2>How to take notes</h2>
+	</section>
+	<section>
+		<img src="images/notes.jpg">
+	</section>
 </section>
 <section>
 	<section>
 		<h2>Avoiding plagiarism</h2>
-		 <p>the uncredited use (both intentional and unintentional) of somebody else's words or ideas.</p>
+		 <p>The uncredited use (both intentional and unintentional) of somebody else's words or ideas.</p>
 		<small style="padding-top: 100px;">From The Purdue OWL</small>
 	</section>
 </section>
