--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -46,16 +46,27 @@
 </section>
 <section>
 	<section>
+		<h2>Refining your topic</h2>
+		<ul>
+			<li>From an interest in a topic</li>
+			<li>To a focused topic</li>
+			<li>To a question worth asking</li>
+			<li>To an answer with support</li>
+		</ul>
+		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
+	</section>
+	<section>
 		<h2>Finding a topic</h2>
 		<ul>
 			<li>Think of work you've done before</li>
-			<li>What are your personal interests?</li>
+			<li>Explore your personal interests</li>
 			<li>Consider current events</li>
 			<li>Recall your own experiences</li>
 		</ul>
 		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 	<section>
+		<h2>Next steps</h2>
 		<ul>
 			<li>Search for primary documents</li>
 			<li>Read scholarly literature</li>
@@ -79,6 +90,7 @@
 		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 	<section>
+		<h2>Asking the right questions</h2>
 		<ul>
 			<li>HOW and WHY often go deeper than WHO, WHAT, WHEN, WHERE</li>
 			<li>Don't speculate, gather evidence</li>
@@ -88,12 +100,10 @@
 	</section>
 	<section>
 		<ul>
-			<li>From an interest in a topic</li>
-			<li>To a focused topic</li>
-			<li>To a question worth asking</li>
-			<li>To an answer with support</li>
+			<li>Topic: I am studying _____</li>
+			<li>Question: because I want to find out what/why/how _______</li>
+			<li>Significance: in order to help my reader understand _______</li>
 		</ul>
-		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 </section>
 <section>
@@ -107,10 +117,10 @@
 	</section>
 	<section>
 		<dl>
-			<dd>Different sources:</dd>
-			<dt>Primary</dt>
-			<dt>Secondary</dt>
-			<dt>Tertiary?</dt>
+			<dt>Different sources:</dt>
+			<dd>Primary</dd>
+			<dd>Secondary</dd>
+			<dd>Tertiary?</dd>
 		</dl>
 	</section>
 	<section>
@@ -121,6 +131,7 @@
 		<h2>OneSearch</h2>
 	</section>
 	<section>
+		<h2>Possible sources</h2>
 		<ul>
 			<li>Encyclopedias</li>
 			<li>Dictionaries</li>
@@ -131,14 +142,14 @@
 			<li>Maps &amp; Atlases</li>
 		</ul>
 	</section>
-	<section>
+<!-- 	<section>
 		<ul>
 			<li>Government Documents</li>
 			<li>Statistics</li>
 			<li>Timelines</li>
 			<li>Images</li>
 		</ul>
-	</section>
+	</section> -->
 	<section>
 		<h2>Evaluation</h2>
 	</section>
@@ -157,37 +168,30 @@
 		</dl>
 		<small style="padding-top: 100px;">From <i>The Information-Literate Historian</i> by Jenny L. Presnell</small>
 	</section>
-	<section>
-		<ul>
-			<li>Topic: I am studying _____</li>
-			<li>Question: because I want to find out what/why/how _______</li>
-			<li>Significance: in order to help my reader understand _______</li>
-		</ul>
-	</section>
 </section>
 <section>
 	<section>
-		<h2>How to take notes</h2>
+		<h2>Thoughts on taking notes</h2>
 	</section>
 	<section>
 		<img src="images/notes.jpg">
 	</section>
 </section>
-<section>
+<!-- <section>
 	<section>
 		<h2>Avoiding plagiarism</h2>
 		 <p>The uncredited use (both intentional and unintentional) of somebody else's words or ideas.</p>
 		<small style="padding-top: 100px;">From The Purdue OWL</small>
 	</section>
-</section>
+</section> -->
 <section>
 	<h2>Paper formatting</h2>
-	<h2>How to cite</h2>
+	<p>How to cite</p>
 	<p><a href='https://owl.english.purdue.edu/owl/'>Purdue OWL</a></p>
 </section>
 <section>
 	<section>
-		<h2>How and Why of Literature Reviews</h2>
+		<h2>Literature Reviews</h2>
 	</section>
 	<section>
 	<h2>What?</h2>
