--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -75,13 +75,12 @@
 		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 	<section>
-		<h2>Narrow down your topic</h2>
+		<h2>Research is iterative</h2>
 		<ul>
 			<li>Find something of interest</li>
-			<li>A topic</li>
+			<li>Choose a topic</li>
 			<li>Raise a question about that topic</li>
-			<li>Next steps</li>
-			<li>RESEARCH IS ITERATIVE</li>
+			<li>Go around again</li>
 			<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 		</ul>
 	</section>
@@ -99,6 +98,7 @@
 		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 	<section>
+		<h2>Exercise</h2>
 		<ul>
 			<li>Topic: I am studying _____</li>
 			<li>Question: because I want to find out what/why/how _______</li>
@@ -106,12 +106,6 @@
 		</ul>
 	</section>
 </section>
-<section>
-	<section>
-		<h2>How to search for resources</h2>
-	</section>
-</section>
-<section>
 	<section>
 		<h2>Finding &amp; Evaluating sources</h2>
 	</section>
