--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -183,7 +183,7 @@
 	<p>How to cite</p>
 	<p><a href='https://owl.english.purdue.edu/owl/'>Purdue OWL</a></p>
 </section>
-<section>
+<!-- <section>
 	<section>
 		<h2>Literature Reviews</h2>
 	</section>
@@ -200,13 +200,12 @@
 	</section>
 	<section>
 		<h2>How?</h2>
-
 	</section>
 </section>
 
 <section>
 	<h2>Differences in Disciplines</h2>
-</section>
+</section> -->
 </div>
 </div>
 </body>
