--- a/presentations/canada.html
+++ b/presentations/canada.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Stephen Zweibel">
     <meta name="author" content="Patrick Smyth">
     <meta name="author" content="Matt Gold">
+    <meta name="author" content="Jojo Karlin">
     
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -162,7 +163,7 @@
 	<section>
 	  <img src="images/logo.png">
 	  <h3>Questions?</h3>
-	  <p>Matthew K. Gold: @mkgold</p>
+	  <p>Jojo Karlin: @jojokarlin</p>
 	  <p>Stephen Zweibel: @SteveZweibel</p>
 	  <p>Patrick Smyth: @psmyth01</p>
 	</section>
