--- a/presentations/canada.html
+++ b/presentations/canada.html
@@ -43,6 +43,8 @@
 	  <img src="images/logo.png">
 	  <p>Building Cloud-Based Infrastructure <br>for Digital Humanities
 	    Projects</p>
+	  <p><a href='http://dhbox.org'>http://dhbox.org</a></p>
+	  <p>@DH_Box</p>
 	</section>
 	<section>
 	<!-- Matt's stuff  -->
@@ -155,10 +157,6 @@
 	    <p>Built by faculty and students</p>
 	    <p>Sharing DH methods</p>
 	  </section>
-	</section>
-	<section>
-		<h1>Demo</h1>
-		<p><a href="http://54.209.44.14">54.209.44.14</a></p>
 	</section>
 	<section>
 	  <img src="images/logo.png">
