--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -162,13 +162,11 @@
 		<img src="images/notes.jpg">
 	</section>
 </section>
-<!-- <section>
+<section>
 	<section>
-		<h2>Avoiding plagiarism</h2>
-		 <p>The uncredited use (both intentional and unintentional) of somebody else's words or ideas.</p>
-		<small style="padding-top: 100px;">From The Purdue OWL</small>
+		<img src="images/citations.jpg">
 	</section>
-</section> -->
+</section>
 <section>
 	<h2>Paper formatting</h2>
 	<p>How to cite</p>
