--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -161,10 +161,8 @@
 	<section>
 		<img src="images/notes.jpg">
 	</section>
-</section>
-<section>
 	<section>
-		<img src="images/citations.jpg">
+		<p><a href='images/citations.jpg'>Reasoning behind citation</a><p>
 	</section>
 </section>
 <section>
