--- a/presentations/Augur.html
+++ b/presentations/Augur.html
@@ -37,7 +37,28 @@
 	<h1>Augur</h1>
 </section>
 <section>
-	<img src="images/augur/augur2.png">
+	<img src="images/augur/gimlet.png">
+</section>
+<section>
+	<img src="images/augur/lab_cat.png">
+</section>
+<section>
+	<img src="images/augur/lines.png">
+</section>
+<section>
+	<img src="images/augur/pies.png">
+</section>
+<section>
+	<img src="images/augur/tags.png">
+</section>
+<section>
+	<img src="images/augur/charts_top.png">
+</section>
+<section>
+	<img src="images/augur/admin.png">
+</section>
+<section>
+	<img src="images/augur/wexler_cat.png">
 </section>
 </div>
 </div>
