--- a/presentations/Augur.html
+++ b/presentations/Augur.html
@@ -7,7 +7,7 @@
 
 		<title>Augur</title>
 
-		<meta name="description" content="A presentation on the CUNY+ API">
+		<meta name="description" content="A presentation on Augur">
 		<meta name="author" content="Stephen Zweibel">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -35,9 +35,13 @@
 <div class="slides">
 <section>
 	<h1>Augur</h1>
+	<h3>By Stephen Zweibel</h3>
 </section>
 <section>
 	<img src="images/augur/augur2.png">
+</section>
+<section>
+	<img src="images/augur/gimlet.png">
 </section>
 <section>
 	<img src="images/augur/wexler_cat.png">
@@ -47,9 +51,6 @@
 </section>
 <section>
 	<img src="images/augur/tags.png">
-</section>
-<section>
-	<img src="images/augur/gimlet.png">
 </section>
 <section>
 	<img src="images/augur/lines.png">
@@ -62,6 +63,9 @@
 </section>
 <section>
 	<img src="images/augur/admin.png">
+</section>
+<section>
+	<h1>The End</h1>	
 </section>
 </div>
 </div>
