--- a/presentations/masters.html
+++ b/presentations/masters.html
@@ -7,7 +7,7 @@
 
 		<title>MALS Research</title>
 
-		<meta name="description" content="A presentation on the CUNY+ API">
+		<meta name="description" content="A presentation on Research">
 		<meta name="author" content="Stephen Zweibel">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -34,7 +34,7 @@
 <!-- Any section element inside of this container is displayed as a slide -->
 <div class="slides">
 <section>
-	<h1>Research for MALS Students</h1>
+	<h1>Research for Master's Students</h1>
 </section>
 <section>
 	<h2>What we'll cover</h2>
